--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,11 +18,14 @@
         "bn.js": "^4.11.8",
         "chalk": "^2.4.2",
         "crypto-js": "^3.1.9-1",
+        "deepcopy": "^2.0.0",
         "ethereumjs-util": "^6.1.0",
         "ethjs-abi": "^0.2.1",
         "fs-extra": "^8.0.1",
         "isarray": "^2.0.4",
         "keccak": "^2.0.0",
+        "node-forge": "^0.8.5",
+        "pem-file": "^1.0.1",
         "rlp": "^2.2.3",
         "secp256k1": "^3.7.1",
         "tls": "^0.0.1",
