--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -30,7 +30,7 @@
         "secp256k1": "^3.7.1",
         "tls": "^0.0.1",
         "uuid": "^3.3.2",
-        "web3": "0.20.7"
+        "web3": "^1.2.0"
     },
     "license": "Apache-2.0",
     "licenses": [
