--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-language: node_js
 # node_js:
 #   - "8"
 branches:
@@ -16,10 +15,22 @@ git:
 matrix:
     fast_finish: true
     include:
-        - os: linux
+        - language: python
+          python: 3.6
+          dist: xenial
+          before_cache:
+          cache:
+          before_install:
+          script: |
+            bash .ci/ci_check_commit.sh
+
+        - language: node_js
+          os: linux
           dist: xenial
           sudo: required
-        - os: osx
+
+        - language: node_js
+          os: osx
           osx_image: xcode10.14.3
 
 addons:
