--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,13 @@ matrix:
           os: linux
           dist: xenial
           sudo: required
+        
+        - language: node_js
+          os: linux
+          dist: xenial
+          sudo: required
+          script: |
+            bash .ci/ci_check_gm.sh
 
         - language: node_js
           os: osx
