support SM crypto (#47)

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -28,6 +28,7 @@
         "pem-file": "^1.0.1",
         "rlp": "^2.2.3",
         "secp256k1": "^3.7.1",
+        "semver": "^7.1.1",
         "tls": "^0.0.1",
         "uuid": "^3.3.2",
         "web3": "^1.2.0"
