--- a/.travis.yml
+++ b/.travis.yml
@@ -15,23 +15,30 @@ git:
 matrix:
     fast_finish: true
     include:
-        - language: python
-          python: 3.6
-          dist: xenial
-          before_cache:
-          cache:
-          before_install:
-          script: |
-            bash .ci/code_security_audit.sh
+        # - language: python
+        #   python: 3.6
+        #   dist: xenial
+        #   before_cache:
+        #   cache:
+        #   before_install:
+        #   script: |
+        #     bash .ci/code_security_audit.sh
 
         - language: node_js
           os: linux
           dist: xenial
           sudo: required
+        
+        - language: node_js
+          os: linux
+          dist: xenial
+          sudo: required
+          script: |
+            bash .ci/ci_check_gm.sh
 
         - language: node_js
           os: osx
-          osx_image: xcode10.14.3
+          osx_image: xcode11.3
 
 addons:
   apt:
