--- a/packages/cli/conf/config.json
+++ b/packages/cli/conf/config.json
@@ -1,7 +1,8 @@
 {
+    "encryptType": "ECDSA",
     "privateKey": {
         "type": "pem",
-        "value": "./0x144d5ca47de35194b019b6f11a56028b964585c9.pem"
+        "value": "./ecdsa.pem"
     },
     "nodes": [
         {
@@ -10,10 +11,11 @@
         }
     ],
     "authentication": {
-        "key": "/path/to/sdk/key",
-        "cert": "/path/to/sdk/certificate",
-        "ca": "/path/to/CA/certificate"
+        "key": "./sdk.key",
+        "cert": "./sdk.crt",
+        "ca": "./ca.crt"
     },
     "groupID": 1,
+    "chainID": 1,
     "timeout": 10000
 }
