--- a/packages/cli/conf/config.json
+++ b/packages/cli/conf/config.json
@@ -11,9 +11,9 @@
         }
     ],
     "authentication": {
-        "key": "/path/to/sdk/key",
-        "cert": "/path/to/sdk/certificate",
-        "ca": "/path/to/CA/certificate"
+        "key": "./sdk.key",
+        "cert": "./sdk.crt",
+        "ca": "./ca.crt"
     },
     "groupID": 1,
     "timeout": 10000
