support SM crypto (#47) (#65)
* support SM crypto (#47)

* fix code factor issues

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,13 @@ matrix:
           sudo: required
 
         - language: node_js
+          os: linux
+          dist: xenial
+          sudo: required
+          script: |
+            bash .ci/ci_check_gm.sh
+
+        - language: node_js
           os: osx
           osx_image: xcode11.3
 
