--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "chalk": "^2.4.2",
         "is-json": "^2.0.1",
+        "node-sql-parser": "^1.7.0",
         "yargs": "^13.3.0"
     },
     "license": "Apache-2.0",
