--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,10 +1,10 @@
 {
     "name": "cli",
     "description": "CLI tool for interacting with FISCO BCOS",
-    "version": "0.9.0",
+    "version": "1.0.0",
     "repository": {
         "type": "git",
-        "url": "https://github.com/vita-dounai/nodejs-sdk"
+        "url": "https://github.com/FISCO-BCOS/nodejs-sdk"
     },
     "engineStrict": true,
     "engines": {
@@ -17,6 +17,7 @@
     "dependencies": {
         "chalk": "^2.4.2",
         "is-json": "^2.0.1",
+        "node-sql-parser": "^1.7.0",
         "yargs": "^13.3.0"
     },
     "license": "Apache-2.0",
