--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "npm": ">=5.6.0"
     },
     "scripts": {
+        "postinstall": "npm run bootstrap",
         "repoclean": "lerna clean && npm run clean-solc-0.4 && npm run clean-solc-0.5",
         "bootstrap": "lerna bootstrap && npm run install-solc-0.4 && npm run install-solc-0.5",
         "install-solc-0.4": "cd ./packages/api/compile/compilers/solc-0.4 && npm install",
@@ -21,9 +22,10 @@
         "clean-solc-0.5": "rm -rf ./packages/api/compile/compilers/solc-0.5/node_modules",
         "test": "mocha"
     },
-    "dependencies": {},
+    "dependencies": {
+        "lerna": "^3.16.1"
+    },
     "devDependencies": {
-        "lerna": "^3.16.1",
         "mocha": "^7.1.2"
     },
     "nyc": {
