--- a/.travis.yml
+++ b/.travis.yml
@@ -46,8 +46,8 @@ addons:
     packages:
     - openssl
 before_install:
-  - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.2/install.sh | bash
-  - source ~/.$(basename $SHELL)rc
+  - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh | bash
+  # - source ~/.$(basename $SHELL)rc
 install: 
   - nvm install $NODEJS_VERSION 
   - nvm use $NODEJS_VERSION
